k8s/ghost-db.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mariadb
  name: skolplattformen-ghost-mariadb
  namespace: skolplattformen
spec:
  ports:
  - name: mysql
    port: 3306
    protocol: TCP
    targetPort: mysql
  selector:
    app: mariadb
    component: master
    release: skolplattformen-ghost
  sessionAffinity: None
  type: ClusterIP
